--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <span class="experience-location">Georgia Tech Network Services</span>
                     </div>
                     <br><br>
-                    <span class="description"> When I wasn't directly supporting network hardware, my project at Georgia Tech Network Services involved compiling data from one network hardware visualization platform and moving it to another, more updated, platform. The official tool for doing so malfunctioned for our data, so I cobbled together a series of homemade Python scripts that interacted with Cisco APIs and CSVs, as well as compiled new data, to create the "source of truth" for wireless access points on campus!</span>
+                    <span class="description"> When I wasn't directly supporting network hardware, my project at Georgia Tech Network Services involved compiling data from one network hardware visualization platform and moving it to another more updated platform. The official tool for doing so malfunctioned for our data, so I cobbled together a series of homemade Python scripts that interacted with Cisco APIs and CSVs, as well as compiled new data, to create the "source of truth" for wireless access points on campus!</span>
                     <ul class="description">                    
 
                         <li><strong>Transitioned</strong> to a new Cisco wireless access point management and configuration platform</li>
